bk_ida/gobmkida/c0/play_ascii
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_ascii/src/interface/play_ascii.c:1051:14: error: expected identifier or '('
struct state = 1; 
             ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_ascii/src/interface/play_ascii.c:1076:9: error: expected expression
while ( struct state == 1 ) 
        ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_ascii/src/interface/play_ascii.c:1349:35: error: read-only variable is not assignable
tmpstring[strlen( tmpstring) - 1] = 0; 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_ascii/src/interface/play_ascii.c:1366:37: error: read-only variable is not assignable
tmpstringa[strlen( tmpstringa) - 1] = 0; 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_ascii/src/interface/play_ascii.c:1430:1: error: use of undeclared identifier 'qToBigEndian'
qToBigEndian<unsigned int>( gameinfoa->computer_player, stdout); 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_ascii/src/interface/play_ascii.c:1430:14: error: expected expression
qToBigEndian<unsigned int>( gameinfoa->computer_player, stdout); 
             ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_ascii/src/interface/play_ascii.c:1435:14: error: expected identifier or '('
struct state = 0; 
             ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_ascii/src/interface/play_ascii.c:1449:1: error: expected expression
struct state = 2; 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_ascii/src/interface/play_ascii.c:1456:37: error: read-only variable is not assignable
tmpstringb[strlen( tmpstringb) - 1] = 0; 
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_ascii/src/interface/play_ascii.c:1466:1: error: expected expression
struct state = 1; 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_ascii/src/interface/play_ascii.c:1472:1: error: expected expression
struct state = 0; 
^
11 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/play_ascii/src/obj/2/play_ascii.o] Error 1
